# CS661Project

./: .gitignore  LICENSE  TODOS.md
cpp/benchmarking/: CMakeLists.txt  README.md
cpp/benchmarking/include/: cifar10.h  code_testing.h  common.h  network.h  test.h
cpp/benchmarking/src/: cifar10.cpp  code_testing.cpp  common.cpp  main.cpp  network.cpp  test.cpp
cpp/benchmarking/tests/: cifar10_test.sh
exp/: profile_with_ncu_cpp.sh  test.py
general/readings/: cpp.md  gpu.md  language_model.md  memory_vs_compute_bound.md  quantization.md
python/models/model_generation/: base.py  utils.py
python/models/resnet/: CNN.py  CNNBuilder.py  README.md  ResNet.ipynb  TestUsages.py  model_generation.ipynb  models.py  precision_generation.ipynb
python/models/resnet/saved_models/: CNN.pth  CNN_quantizeTrained.pth  CNN_quantized.pth  ResNetBase.pth  ResNetConfigTest.pth  ResNetQuantConfigTest.pth  ResNetTest1.pth  ResNetTest2.pth  ResNet_QuantizationTrained.pth  ResNet_QuantizationTrained.pth.pth  ResNet_Quantized.pth  ResNet_Quantized.pth.pth
python/models/resnet_old/: CNN.py  README.md
python/models/resnet_old/saved_models/: CNN_quantizeTrained.pth  CNN_quantized.pth
python/scripts/: dummy_cifar10_network.pt  generate_dummy_cifar10.py  test_resnet.py
shell/: profile_with_ncu.sh
